--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "leverage heroku config/env variables to access external services",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +25,8 @@
   },
   "homepage": "https://github.com/hayden-erickson/node_on_heroku#readme",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mysql": "^2.9.0",
+    "nodemon": "^1.8.1"
   }
 }
