--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "body-parser": "^1.14.1",
     "css-loader": "^0.22.0",
     "express": "^4.13.3",
+    "jsx-loader": "^0.13.2",
     "mysql": "^2.9.0",
     "nodemon": "^1.8.1",
+    "querystring": "^0.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "style-loader": "^0.13.0"
