--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "leverage heroku config/env variables to access external services",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "babel-node server.js",
     "dev": "webpack && nodemon server.js",
     "migrations": "node migrations/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,12 +26,12 @@
   },
   "homepage": "https://github.com/hayden-erickson/node_on_heroku#readme",
   "dependencies": {
+    "babel": "5.x",
     "body-parser": "^1.14.1",
     "css-loader": "^0.22.0",
     "express": "^4.13.3",
     "jsx-loader": "^0.13.2",
     "mysql": "^2.9.0",
-    "nodemon": "^1.8.1",
     "querystring": "^0.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
